Update map.html file

--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav">
             <li class="dropdown">
               
-	      <a href="html/cricket.html">
+	      <a href="html/Personal.html">
                 Personal
                 <span class="caret"></span>
               </a>
@@ -77,25 +77,34 @@
                     	<li><a href="#">Nokia</a></li>
                     </ul>
                   </li>
-
-
-
-                <li role="separator" class="divider"></li>
-                <li><a href="html/ANPR.html">ANPR</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="html/C_optimization.html">C optimization</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="html/git.html">GIT</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="html/java.html">Java</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="html/ls_ll.html">ls ll</a></li>
-                <li><a href="html/symbolic_links.html">Symbolic links</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="html/LTE.html">LTE</a></li>
-                <li><a href="html/Modulation.html">Modulation</a></li>
-                <li><a href="html/Real_timeOS.html">Real-time OS</a></li>
-                <li><a href="html/speech_codec.html">Speech codec</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-submenu">
+                    <a href="#">Coding</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="html/C_optimization.html">C optimization</a></li>
+                        <li><a href="html/git.html">GIT</a></li>
+                        <li><a href="html/java.html">Java</a></li>
+                    </ul>
+                  </li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-submenu">
+                    <a href="#">Linux</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="html/ls_ll.html">ls ll</a></li>
+                        <li><a href="html/symbolic_links.html">Symbolic links</a></li>
+                    </ul>
+                  </li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-submenu">
+                    <a href="#">Other links</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="html/ANPR.html">ANPR</a></li>
+                        <li><a href="html/LTE.html">LTE</a></li>
+                        <li><a href="html/Modulation.html">Modulation</a></li>
+                        <li><a href="html/Real_timeOS.html">Real-time OS</a></li>
+                        <li><a href="html/speech_codec.html">Speech codec</a></li>
+                    </ul>
+                  </li>
               </ul>
             </li>
           </ul> 
@@ -103,10 +112,10 @@
       </div><!-- /.container-fluid -->
     </nav> <!-- /navbar-example -->
 
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="starter-template">
-        <p class="lead">Add a summary and positive energy here, then I could add:</p>      
+        <p class="lead">Live life to the fullest! Make the most of it! Don't have regrets, you make fate, be pro-active, you can only control yourself, you can only guide others. Most of all, have fun and smile!</p>      
         <p class="lead">- things to do</p>
         <p class="lead">- diary</p>
       </div>
@@ -116,7 +125,7 @@
 
   
       
-  <div class="container">
+  <div class="container-fluid">
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
