--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>map</title></head><body>
-<h1 style="height: 0px;"><small><small><small><small><small><a href="index.html">(Back to home page)</a></small></small></small></small></small></h1>
-
-<h1 style="text-align: center;">Website Index<br>
-</h1>
-
-Home page<br>
-&nbsp;&nbsp;&nbsp; * Things to do<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Shell/Linux scripts<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - ls/ll<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - symlinks<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Makefiles<br>
-&nbsp;&nbsp;&nbsp; * Source control management<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - GIT<br>
-&nbsp;&nbsp;&nbsp; * Website<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Apache<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  <br>
-
-
-</body></html>
+<html>
+  <head>
+    <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+    <title>map</title>
+  </head>
+  <body>
+    <h1 style="height: 0px;"><small><small><small><small><small><a href="index.html">(Back
+                  to home page)</a></small></small></small></small></small></h1>
+    <h1 style="text-align: center;">Website Index<br>
+    </h1>
+    <a href="home.html">Home page</a><br>
+    &nbsp;&nbsp;&nbsp; * <a href="html/Personal.html">Personal</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Lou_Andy_things_to_do.html">Andy-Lou
+      things to do</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Things_to_do.html">Things
+      to do</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
+      bus</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Energy_bus_exercises.html">Energy
+      bus exercises 21/10/2014</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/The_Secret.html">The
+      secret</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Bands_I_like.html">Bands
+      I like</a><br>
+    &nbsp;&nbsp;&nbsp; * <a href="html/cricket.html">Cricket</a><br>
+    &nbsp;&nbsp;&nbsp; * <a href="html/raspberry_pi.html">Raspberry pi</a><br>
+    &nbsp;&nbsp;&nbsp; * <a href="html/apache.html">Web design</a><br>
+    &nbsp;&nbsp;&nbsp; * Work<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/cv.html">CV</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/nsn.html">NSN</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Renesas.html">Renesas</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Accenture.html">Accenture</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; Nokia<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Coding<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="html/C_optimization.html">C
+      optimization</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="html/git.html">GIT</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; <a href="html/java.html">Java</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Linux &nbsp; &nbsp;&nbsp;&nbsp; <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/ls_ll.html">ls/ll</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/symbolic_links.html">symlinks</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Other links<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/ANPR.html">ANPR</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; LTE<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Modulation.html">Modulation</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Real_timeOS.html">Real-time
+      OS</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/speech_codec.html">Speech
+      codec</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <br>
+  </body>
+</html>
