--- a/src/templates/html/Lou_Andy_things_to_do.html
+++ b/src/templates/html/Lou_Andy_things_to_do.html
@@ -7,9 +7,7 @@
   <body>
     <div style="text-align: center;"><big><big>Lou things to do</big></big><br>
     </div>
-    <big><big>
-      </big></big>
-    <br>
+    <big><big> </big></big> <br>
     <ul>
       <li>Thorpe park (to be booked after March 2015)</li>
       <li>Spa day</li>
@@ -47,6 +45,8 @@
       <li>Comrades</li>
       <li>Hawaii</li>
       <li>Neolithic marathon</li>
+      <li><a href="http://www.cycleisland.co.uk/">Randomee</a> (Isle of Wright
+        100k)</li>
     </ul>
     <p>DONE:</p>
     <ul>
