--- a/src/templates/html/Personal.html
+++ b/src/templates/html/Personal.html
@@ -8,7 +8,59 @@
     <h1 style="height: 0px;"><small><small><small><small><small><a href="index.html">(Back
                   to home page)</a></small></small></small></small></small></h1>
     <h1 style="text-align: center;">Personal</h1>
-    <p>Add some positive stuff here - maybe current aspirations</p>
+    This is the latest vision for things to do life in the future.<br>
     <br>
+    SHORT-TERM VISION<br>
+    &nbsp;&nbsp;&nbsp; - what to do about job?<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + start applying for jobs in Novemeber.<br>
+    &nbsp;&nbsp;&nbsp; - where to live? Alvin/Lou?<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + have a trial week living with Lou, sort
+    out shed, move in at end of November<br>
+    &nbsp;&nbsp;&nbsp; - get cricket working with SDL2<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + get it compiling<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + read git <br>
+    &nbsp;&nbsp;&nbsp; - where to live? Alvin/Lou?<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + have a trial week living with Lou, sort
+    out shed, move in at end of November<br>
+    &nbsp;&nbsp; &nbsp;- fix ankle!<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + slowly get back to exercise in the next
+    couple of weeks.<br>
+    <br>
+    LONG-TERM VISION - ENERGY BUS EXERCISES:<br>
+    (1) My vision for my life (including my health) is:<br>
+    &nbsp;&nbsp;&nbsp; - Live a long enjoyable life. Want to be with someone,
+    create a family,
+    live in suburbia, mow the grass, teach the kids to play football. <span style="color: rgb(204, 0, 0);">(Enjoy
+      life have fun)</span><br>
+    &nbsp;&nbsp;&nbsp; - Have a safe financial future. <span style="color: rgb(204, 0, 0);">(Security)</span><br>
+    &nbsp;&nbsp;&nbsp; - Personal ambitions? Hawaii? Devizes-Westminster?
+    Comrades? <span style="color: rgb(204, 0, 0);">(Personal ambitions)</span><br>
+    &nbsp;&nbsp;&nbsp; - Be fit but no desire to push any further at running,
+    able to take on random challenges.<br>
+    &nbsp;&nbsp;&nbsp; - Be a positive influence in peoples lives! <br>
+    &nbsp;&nbsp;&nbsp; - Travel? Want to go to Norway fjords, South Africa,
+    Egypt, Inca trail, walk the grand canyon.<br>
+    &nbsp;&nbsp;&nbsp; - Friends? OF gatherings? Mountain biking?<br>
+    &nbsp;&nbsp;&nbsp; - Family? (Josh, parents) When to see them? How often? <span
+      style="color: rgb(204, 0, 0);">(Family/friends)</span><br>
+    <br>
+    (2) My vision for my work, career, job, and team is:<br>
+    &nbsp;&nbsp;&nbsp; - Be passionate about my job. Create products to be proud
+    of and work in
+    a team where we can have fun creating them. <br>
+    &nbsp;&nbsp;&nbsp; - Still have a good work/lifebalance. <span style="color: rgb(204, 0, 0);">(Enjoy
+      work have fun, balance)</span><br>
+    <br>
+    (3) My vision for my relationship and family is:<br>
+    &nbsp;&nbsp;&nbsp;
+    - Always live in a loving relationship. Be pro-active, don't live
+    withnegativity, don't let things slip through the cracks.<br>
+    &nbsp;&nbsp;&nbsp; - Feel loved and give love.<br>
+    &nbsp;&nbsp;&nbsp; - Don't be or feel dominated. Feel as though love is
+    equal on both sides.<br>
+    &nbsp;&nbsp;&nbsp; - Don't feel the need to create special days. It's the
+    small things that
+    are important, I.e. sharing love daily, texting, smiling, beingpositive with
+    each other. <span style="color: rgb(204, 0, 0);">(Fairness/evenness)</span>
   </body>
 </html>
