--- a/src/templates/html/Things_to_do.html
+++ b/src/templates/html/Things_to_do.html
@@ -11,21 +11,25 @@
       <div style="text-align: left;"><big>Today:</big><br>
         <div style="text-align: left;">
           <ul>
-            <li>&nbsp;&nbsp;&nbsp; Stretch in evening</li>
+            <li>clean teeth</li>
+            <li>get money</li>
+            <li>golf</li>
+            <li>txt Rob</li>
           </ul>
           Tomorrow:<br>
           <ul>
             <li>walk</li>
-            <li>clean teeth</li>
             <li>Stretch morning</li>
             <li>Stretch + exercise afternoon</li>
-            <li>Pump car tyres up</li>
-            <li>Add water to windscreen wash</li>
-            <li>Add oil to car</li>
-            <li>Haircut</li>
+            <li>Phone St Georges - confirm genetics test/Byre consultation</li>
           </ul>
           <ul>
             <li>Nationwide</li>
+          </ul>
+          <ul>
+            <li>Stretch in evening </li>
+          </ul>
+          <ul>
           </ul>
           <p>Mid-term:</p>
         </div>
