--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -84,6 +84,7 @@
                         <li><a href="html/C_optimization.html">C optimization</a></li>
                         <li><a href="html/git.html">GIT</a></li>
                         <li><a href="html/java.html">Java</a></li>
+                        <li><a href="html/SOLID_principles.html">SOLID principles</a></li>
                     </ul>
                   </li>
                   <li role="separator" class="divider"></li>
@@ -115,7 +116,10 @@
     <div class="container-fluid">
 
       <div class="starter-template">
-        <p class="lead">Live life to the fullest! Make the most of it! Don't have regrets, you make fate, be pro-active, you can only control yourself, you can only guide others. Most of all, have fun and smile!</p>      
+        <p class="lead">Live life to the fullest!</p>      
+        <p class="lead">Life is full of choices, you make a choice and don't have regrets!</p>      
+        <p class="lead">You can't control fate, simply be pro-active, you can only control yourself and you can only guide others.</p>      
+        <p class="lead">Most of all, have fun and smile!</p>      
         <p class="lead">- things to do</p>
         <p class="lead">- diary</p>
       </div>
