--- a/src/templates/html/Lou_Andy_things_to_do.html
+++ b/src/templates/html/Lou_Andy_things_to_do.html
@@ -28,10 +28,8 @@
       <li>Canterbury Cathedral</li>
       <li>White cliffs of Dover</li>
       <li>Lydford gorge</li>
-      <li>Nottinghill carnival (30-31st August 2015)<br>
-      </li>
-      <li>Cranleigh carnival<br>
-      </li>
+      <li>Cranleigh carnival</li>
+      <li>Borden cartbox races</li>
     </ul>
     <ul>
       <li>Egypt</li>
@@ -58,6 +56,10 @@
       <li><a href="http://www.minack.com/">Manick theatre</a> (to be booked
         after March 2015)</li>
       <li>Cheddar gorge</li>
+      <li>Nottinghill carnival (30-31st August 2015)<br>
+      </li>
+      <li><br>
+      </li>
     </ul>
     <ul>
     </ul>
