--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -104,6 +104,7 @@
                         <li><a href="html/Modulation.html">Modulation</a></li>
                         <li><a href="html/Real_timeOS.html">Real-time OS</a></li>
                         <li><a href="html/speech_codec.html">Speech codec</a></li>
+                        <li><a href="html/Excel_tips.html">Excel tips</a></li>
                     </ul>
                   </li>
               </ul>
