--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -48,6 +48,6 @@
       OS</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/speech_codec.html">Speech
       codec</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; -&gt; Ex<a href="html/Excel_tips.html"></a>cel<br>
   </body>
 </html>
