Add Lou things to do

--- a/src/templates/html/Excel_tips.html
+++ b/src/templates/html/Excel_tips.html
@@ -12,5 +12,13 @@
     </p>
     <p>How to make a dropdown menu:</p>
     <p><a href="https://support.office.com/en-us/article/Create-a-drop-down-list-7693307a-59ef-400a-b769-c5402dce407b">https://support.office.com/en-us/article/Create-a-drop-down-list-7693307a-59ef-400a-b769-c5402dce407b</a></p>
+    <p>How to remove a dropdown menu:</p>
+    <p><a href="https://support.office.com/en-us/article/Create-a-drop-down-list-7693307a-59ef-400a-b769-c5402dce407b">https://support.office.com/en-au/article/Insert-or-delete-a-drop-down-list-fdde2fb6-e257-4c62-b794-1427762428c6</a></p>
+    <p>Security video, how to put a spreadsheet in a trusted location to enable
+      macros:</p>
+    <p><a href="http://excelcentral.com/excel2007/expert/lessons/08120-understand-macro-security.html">http://excelcentral.com/excel2007/expert/lessons/08120-understand-macro-security.html</a></p>
+    <p>How to choose a file</p>
+    <span style="text-decoration: underline;"><a href="http://stackoverflow.com/questions/16647396/excel-how-to-add-a-file-selection-button-to-a-cell">http://stackoverflow.com/questions/16647396/excel-how-to-add-a-file-selection-button-to-a-cell</a><br>
+    </span>
   </body>
 </html>
