--- a/src/templates/html/Lou_Andy_things_to_do.html
+++ b/src/templates/html/Lou_Andy_things_to_do.html
@@ -9,6 +9,44 @@
     </div>
     <big><big> </big></big> <br>
     <ul>
+    </ul>
+    Lou<br>
+    <ol>
+      <li>Thorpe Park</li>
+      <li>Warhorse</li>
+      <li>Tour of Windsor castle</li>
+      <li>Longleat safari park</li>
+      <li>Fruit picking</li>
+      <li>Afternoon tea</li>
+      <li>Camping new forest</li>
+      <li>Spa day</li>
+      <li>Picnic boxhill</li>
+      <li>Cookery class</li>
+      <li>Painting class</li>
+    </ol>
+    Andy<br>
+    <ol>
+      <li>Spa day</li>
+      <li>Bognor</li>
+      <li>Nottinghill carnival</li>
+      <li>Frensham pond</li>
+      <li>Fishing with Gary</li>
+      <li>Chelsea flower show</li>
+      <li>Surrey county show</li>
+      <li>British grand prix</li>
+      <li>Wimbledon</li>
+      <li>Denbies</li>
+    </ol>
+    Andy - longterm<br>
+    <ol>
+      <li>Job - continuous employment</li>
+      <li>House - buy one with garage</li>
+      <li>Get married</li>
+      <li>Learn guitar</li>
+    </ol>
+    <p><br>
+    </p>
+    <ul>
       <li>Thorpe park (to be booked after March 2015)</li>
       <li>Spa day</li>
       <li>Chessington world of adventure (to be booked after March 2015)</li>
@@ -57,8 +95,6 @@
         after March 2015)</li>
       <li>Cheddar gorge</li>
       <li>Nottinghill carnival (30-31st August 2015)<br>
-      </li>
-      <li><br>
       </li>
     </ul>
     <ul>
