--- a/src/templates/html/apache.html
+++ b/src/templates/html/apache.html
@@ -13,6 +13,11 @@
           go here</a><br>
         <br>
         <br>
+        Update noip client:<br>
+http://www.noip.com/support/knowledgebase/installing-the-linux-dynamic-update-client-on-ubuntu/<br>
+        <br>
+        <br>
+        <br>
         How to create an apache server:<br>
         <div style="margin-left: 40px;"><a href="http://www.youtube.com/watch?v=-q8Jj4aAWYw"
             target="_blank">http://www.youtube.com/watch?v=-q8Jj4aAWYw</a><br>
@@ -26,9 +31,8 @@
         modify your router settings, this tutorial is a good start:<br>
         <a href="http://www.youtube.com/watch?v=GC_zc8nIAyw">http://www.youtube.com/watch?v=GC_zc8nIAyw</a><br>
         <br>
-        <hr style="width: 100%; height: 2px;">
-        I installed the following two components (not certain that the first is
-        required):<br>
+        <hr style="width: 100%; height: 2px;"> I installed the following two
+        components (not certain that the first is required):<br>
         <ul>
           <li>&nbsp;&nbsp;&nbsp; sudo apt-get install apache2-bin</li>
           <li>&nbsp;&nbsp;&nbsp; sudo apt-get install apache2</li>
@@ -47,8 +51,8 @@
         complete path to the git repository needs to be executable to other
         users)<br>
         <br>
-        <hr style="width: 100%; height: 2px;">Initially when I used the new
-        html directory I kept the old linking style to www, this was done by
+        <hr style="width: 100%; height: 2px;">Initially when I used the new html
+        directory I kept the old linking style to www, this was done by
         modifying the available 000 and another 000 file within
         /etc/apache/.....<br>
         <br>
