Update Lou things to do

--- a/src/templates/html/Lou_Andy_things_to_do.html
+++ b/src/templates/html/Lou_Andy_things_to_do.html
@@ -44,6 +44,17 @@
       <li>Get married</li>
       <li>Learn guitar</li>
     </ol>
+    <p>Other</p>
+    <ol>
+      <li>Photo session</li>
+      <li>Borden soapbox derby</li>
+      <li>Finch foundary fireworks</li>
+      <li>Polesden Lacey</li>
+      <li>Mere gardens</li>
+      <li>Stonehenge</li>
+    </ol>
+    <p><br>
+    </p>
     <p><br>
     </p>
     <ul>
