Update Lou things to do

--- a/src/templates/html/Lou_Andy_things_to_do.html
+++ b/src/templates/html/Lou_Andy_things_to_do.html
@@ -13,7 +13,7 @@
     Lou<br>
     <ol>
       <li>Thorpe Park</li>
-      <li>Warhorse</li>
+      <li><span style="text-decoration: line-through;">Warhorse</span></li>
       <li>Tour of Windsor castle</li>
       <li>Longleat safari park</li>
       <li>Fruit picking</li>
@@ -28,13 +28,13 @@
     <ol>
       <li>Spa day</li>
       <li>Bognor</li>
-      <li>Nottinghill carnival</li>
+      <li><span style="text-decoration: line-through;">Nottinghill carnival</span></li>
       <li>Frensham pond</li>
       <li>Fishing with Gary</li>
-      <li>Chelsea flower show</li>
-      <li>Surrey county show</li>
+      <li>Chelsea flower show - 27/28 May</li>
+      <li>Surrey county show - 30 May</li>
       <li>British grand prix</li>
-      <li>Wimbledon</li>
+      <li>Wimbledon - 27 June</li>
       <li>Denbies</li>
     </ol>
     Andy - longterm<br>
@@ -47,7 +47,7 @@
     <p>Other</p>
     <ol>
       <li>Photo session</li>
-      <li>Borden soapbox derby</li>
+      <li>Borden/reach valley soapbox derby</li>
       <li>Finch foundary fireworks</li>
       <li>Polesden Lacey</li>
       <li>Mere gardens</li>
