--- a/src/templates/html/cv.html
+++ b/src/templates/html/cv.html
@@ -4,12 +4,7 @@
     <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
     <title>cv</title>
   </head>
-  <body>Andrew CARTER <br>
-    82a Falkland Road, Dorking, Surrey, RH43AD <br>
-    Tel: 07748705586 <br>
-    Email: asfcarter@yahoo.co.uk <br>
-    &nbsp;<br>
-    PROFILE <br>
+  <body>PROFILE <br>
     &nbsp;<br>
     I am an embedded software engineer with 12 years experience in the telecoms
     industry. Initially working on video enhancements, then transferring to
@@ -78,10 +73,19 @@
     &nbsp; <br>
     WORK EXPERIENCE <br>
     &nbsp;<br>
-    Oct 2013 - Present&nbsp;&nbsp;&nbsp; <a href="nsn.html">Nokia Solutions
+    Oct 2015 - Present BAE systems<br>
+    <br>
+    Oct 2015 - Software Engineer<br>
+    <br>
+    Rhapsody<br>
+    Rational Rose<br>
+    Embarcardero<br>
+    <br>
+    <br>
+    Oct 2013 - Dec 2014 &nbsp;&nbsp; <a href="nsn.html">Nokia Solutions
       Networks </a><br>
     &nbsp;<br>
-    Oct 2013 &#8211; Present&nbsp;&nbsp;&nbsp; GSM DSP Software Engineer&nbsp;
+    Oct 2013 &#8211; Dec 2014 &nbsp;&nbsp; GSM DSP Software Engineer&nbsp;
     &nbsp;&nbsp;&nbsp; &nbsp;<br>
     &nbsp;<br>
     &nbsp;&nbsp;&nbsp; Joining the newly formed DSP GSM base station team.
