Update Energy bus exercises March 2016

--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -17,7 +17,9 @@
       to do</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
       bus</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="html/Energy_bus_exercises.html">Energy
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Mar_2016.html">Energy
+      bus exercises March 2016</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Oct_2014.html">Energy
       bus exercises 21/10/2014</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/The_Secret.html">The
       secret</a><br>
