--- a/src/templates/html/Energy_bus_exercises_Mar_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Mar_2016.html
@@ -19,9 +19,9 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Easter &nbsp;&nbsp; <br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - haircut<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">haircut</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - get drugs<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dentist<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">dentist</span><br>
     &nbsp;&nbsp;&nbsp; + Flat<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - look after plants<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dig corner<br>
