--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -14,7 +14,9 @@
     <br>
     Below are a list of the main comments/phrases that I took from the energy
     bus. The following are my visions based on the energy bus questions:<br>
-    <a href="Energy_bus_exercises.html">My visions 21/10/2014</a><br>
+    <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Mar_2016.html">My
+      visions March 2016</a><br>
+    <a href="Energy_bus_exercises.html">My visions October 2014</a><br>
     <br>
     &nbsp;&nbsp;&nbsp; Praise or dwell on the positive!<br>
     &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - don't think of the negative!<br>
@@ -24,7 +26,7 @@
     things"<br>
     <br>
     (xiii) &nbsp;&nbsp; &nbsp;"Live young, have fun, and arrive at your
-    destination as late as posible with a smile on your face!"<br>
+    destination as late as possible with a smile on your face!"<br>
     <br>
     (7)&nbsp;&nbsp; &nbsp;"Everything happens for a reason"<br>
     <br>
