--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -16,7 +16,8 @@
     bus. The following are my visions based on the energy bus questions:<br>
     <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Mar_2016.html">My
       visions March 2016</a><br>
-    <a href="Energy_bus_exercises.html">My visions October 2014</a><br>
+    <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Oct_2014.html">My
+      visions October 2014</a><br>
     <br>
     &nbsp;&nbsp;&nbsp; Praise or dwell on the positive!<br>
     &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - don't think of the negative!<br>
