--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -13,13 +13,13 @@
     &nbsp;&nbsp;&nbsp; * <a href="html/Personal.html">Personal</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Lou_Andy_things_to_do.html">Andy-Lou
       things to do</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Things_to_do.html">Things
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="Things_to_do.html">Things
       to do</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
       bus</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Mar_2016.html">Energy
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Mar_2016.html">Energy
       bus exercises March 2016</a><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Oct_2014.html">Energy
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Oct_2014.html">Energy
       bus exercises 21/10/2014</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/The_Secret.html">The
       secret</a><br>
