Update incorrect links in energy bus pages

--- a/src/templates/html/Energy_bus_exercises_Mar_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Mar_2016.html
@@ -5,8 +5,8 @@
     <title>Energy_bus_-_exercises</title>
   </head>
   <body>
-    <div style="height: 0px;"><a href="file:///home/acarter/cricket/www/html/map.html"><small><small>(Back
-            to map page)</small></small></a><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><br>
+    <div style="height: 0px;"><a href="map.html"><small><small>(Back to map
+            page)</small></small></a><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><br>
       </a> </div>
     <div style="text-align: center;"><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><big><big><span
               style="text-decoration: underline;">Energy bus - Exercises</span></big></big></a><br>
