--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -20,7 +20,7 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Mar_2016.html">Energy
       bus exercises March 2016</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Oct_2014.html">Energy
-      bus exercises 21/10/2014</a><br>
+      bus exercises October 2014</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/The_Secret.html">The
       secret</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Bands_I_like.html">Bands
