--- a/src/templates/html/Energy_bus_exercises_Oct_2014.html
+++ b/src/templates/html/Energy_bus_exercises_Oct_2014.html
@@ -5,10 +5,9 @@
     <title>Energy_bus_-_exercises</title>
   </head>
   <body>
-    <div style="height: 0px;"><a href="file:///home/acarter/cricket/www/html/map.html"><small><small>(Back
-            to map page)</small></small></a><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><br>
-      </a>
-    </div>
+    <div style="height: 0px;"><a href="map.html"><small><small>(Back to map
+            page)</small></small></a><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><br>
+      </a> </div>
     <div style="text-align: center;"><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><big><big><span
               style="text-decoration: underline;">Energy bus - Exercises</span></big></big></a><br>
       <br>
@@ -18,21 +17,24 @@
     &nbsp;&nbsp;&nbsp; - get cricket working with SDL2<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + get it compiling<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + read git <br>
-    &nbsp;&nbsp; &nbsp;- what to do about job?<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + start applying for jobs in Novemeber.<br>
-    &nbsp;&nbsp; &nbsp;- where to live? Alvin/Lou?<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + have a trial week living with Lou, sort
-    out shed, move in at end of November<br>
-    &nbsp;&nbsp; &nbsp;- fix ankle!<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + slowly get back to exercise in the next
-    couple of weeks.<br>
+    &nbsp;&nbsp; &nbsp;- <span style="text-decoration: line-through;">what to
+      do about job?</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + <span style="text-decoration: line-through;">start
+      applying for jobs in Novemeber.</span><br>
+    &nbsp;&nbsp; &nbsp;- <span style="text-decoration: line-through;">where to
+      live? Alvin/Lou?</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + <span style="text-decoration: line-through;">have
+      a trial week living with Lou, sort out shed, move in at end of November</span><br>
+    &nbsp;&nbsp; &nbsp;- <span style="text-decoration: line-through;">fix
+      ankle!</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; + <span style="text-decoration: line-through;">slowly
+      get back to exercise in the next couple of weeks.</span><br>
     <br>
     LONG-TERM VISION - ENERGY BUS EXERCISES:<br>
     (1) My vision for my life (including my health) is:<br>
     &nbsp;&nbsp;&nbsp; - Live a long enjoyable life. Want to be with someone,
-    create a family,
-    live in suburbia, mow the grass, teach the kids to play football. <span style="color: rgb(204, 0, 0);">(Enjoy
-      life have fun)</span><br>
+    create a family, live in suburbia, mow the grass, teach the kids to play
+    football. <span style="color: rgb(204, 0, 0);">(Enjoy life have fun)</span><br>
     &nbsp;&nbsp;&nbsp; - Have a safe financial future. <span style="color: rgb(204, 0, 0);">(Security)</span><br>
     &nbsp;&nbsp;&nbsp; - Personal ambitions? Hawaii? Devizes-Westminster?
     Comrades? <span style="color: rgb(204, 0, 0);">(Personal ambitions)</span><br>
@@ -47,22 +49,18 @@
     <br>
     (2) My vision for my work, career, job, and team is:<br>
     &nbsp;&nbsp;&nbsp; - Be passionate about my job. Create products to be proud
-    of and work in
-    a team where we can have fun creating them. <br>
-    &nbsp;&nbsp;&nbsp; - Still have a good work/life
-    balance. <span style="color: rgb(204, 0, 0);">(Enjoy work have fun,
-      balance)</span><br>
+    of and work in a team where we can have fun creating them. <br>
+    &nbsp;&nbsp;&nbsp; - Still have a good work/life balance. <span style="color: rgb(204, 0, 0);">(Enjoy
+      work have fun, balance)</span><br>
     <br>
     (3) My vision for my relationship and family is:<br>
-    &nbsp;&nbsp;&nbsp;
-    - Always live in a loving relationship. Be pro-active, don't live with
-    negativity, don't let things slip through the cracks.<br>
+    &nbsp;&nbsp;&nbsp; - Always live in a loving relationship. Be pro-active,
+    don't live with negativity, don't let things slip through the cracks.<br>
     &nbsp;&nbsp;&nbsp; - Feel loved and give love.<br>
     &nbsp;&nbsp;&nbsp; - Don't be or feel dominated. Feel as though love is
     equal on both sides.<br>
     &nbsp;&nbsp;&nbsp; - Don't feel the need to create special days. It's the
-    small things that
-    are important, I.e. sharing love daily, texting, smiling, being
-    positive with each other. <span style="color: rgb(204, 0, 0);">(Fairness/evenness)</span>
+    small things that are important, I.e. sharing love daily, texting, smiling,
+    being positive with each other. <span style="color: rgb(204, 0, 0);">(Fairness/evenness)</span>
   </body>
 </html>
