Make change to March 2016 targets

--- a/src/templates/html/Energy_bus_exercises_Mar_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Mar_2016.html
@@ -32,6 +32,10 @@
     &nbsp;&nbsp;&nbsp; + Lou<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     MEDIUM TERM<br>
+    &nbsp;&nbsp;&nbsp; April<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Birthday<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Dad Essex<br>
+    <br>
     &nbsp;&nbsp;&nbsp; + Website<br>
     &nbsp;&nbsp;&nbsp; + Complete Excel<br>
     <br>
