Some minor updates to March 2016

--- a/src/templates/html/Energy_bus_exercises_Mar_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Mar_2016.html
@@ -20,16 +20,17 @@
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">haircut</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - get drugs<br>
+    3&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - get drugs<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">dentist</span><br>
     &nbsp;&nbsp;&nbsp; + Flat<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - look after plants<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dig corner<br>
+    4 &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - look after plants<br>
+    5 &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - dig corner<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint bathroom<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint kitchen<br>
-    &nbsp;&nbsp;&nbsp; + Job<br>
-    &nbsp;&nbsp;&nbsp; + Excel<br>
+    2 &nbsp;&nbsp; + Excel<br>
+    1&nbsp;&nbsp;&nbsp; + Mindfulness book<br>
     &nbsp;&nbsp;&nbsp; + Lou<br>
+    &nbsp;&nbsp;&nbsp; + Job<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     MEDIUM TERM<br>
     &nbsp;&nbsp;&nbsp; April<br>
