Quick update of March 2016

--- a/src/templates/html/Energy_bus_exercises_Mar_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Mar_2016.html
@@ -15,12 +15,14 @@
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     &nbsp;&nbsp;&nbsp; + Things happening<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Family over<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Easter &nbsp;&nbsp; <br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Family
+      over</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; + Easter&nbsp; - Buy dinner&nbsp; <br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">haircut</span><br>
-    3&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - get drugs<br>
+    3&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">get
+      drugs</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">dentist</span><br>
     &nbsp;&nbsp;&nbsp; + Flat<br>
     4 &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - look after plants<br>
@@ -28,7 +30,8 @@
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint bathroom<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - paint kitchen<br>
     2 &nbsp;&nbsp; + Excel<br>
-    1&nbsp;&nbsp;&nbsp; + Mindfulness book<br>
+    1&nbsp;&nbsp;&nbsp; + <span style="text-decoration: line-through;">Mindfulness
+      book</span><br>
     &nbsp;&nbsp;&nbsp; + Lou<br>
     &nbsp;&nbsp;&nbsp; + Job<br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
