Add April 2016 objectives

--- a/src/templates/html/map.html
+++ b/src/templates/html/map.html
@@ -17,6 +17,8 @@
       to do</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <a href="html/Energy_bus.html">Energy
       bus</a><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="file:///home/asfcarter/pi_django/src/templates/html/Energy_bus_exercises_Apr_2016.html">Energy
+      bus exercises April 2016</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Mar_2016.html">Energy
       bus exercises March 2016</a><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&gt; <a href="Energy_bus_exercises_Oct_2014.html">Energy
