Update April 2016 energy bus

--- a/src/templates/html/Energy_bus_exercises_Apr_2016.html
+++ b/src/templates/html/Energy_bus_exercises_Apr_2016.html
@@ -23,12 +23,13 @@
     &nbsp;&nbsp;&nbsp; + Flat<br>
     ON &nbsp; - look after plants<br>
     5&nbsp; &nbsp;&nbsp;&nbsp; - dig corner<br>
-    4&nbsp; &nbsp;&nbsp;&nbsp; - paint kitchen<br>
+    <span style="text-decoration: line-through;">4&nbsp; &nbsp;&nbsp;&nbsp; -
+      paint kitchen</span><br>
     6&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - touch up door<br>
     3&nbsp; + Excel<br>
     &nbsp;&nbsp;&nbsp; + Mindfulness book<br>
     2&nbsp; + IET<br>
-    1&nbsp; + Podcasts<br>
+    <span style="text-decoration: line-through;">1&nbsp; + Podcasts</span><br>
     ON + Lou<br>
     ON + Job<br>
     &nbsp;&nbsp;&nbsp; + Pay sis for travelodge<br>
@@ -38,10 +39,12 @@
     + Buy garden table<br>
     <br>
     May<br>
-    &nbsp;&nbsp;&nbsp; + Zoe (when?)<br>
-    &nbsp;&nbsp;&nbsp; + Gingerline <br>
-    &nbsp;&nbsp;&nbsp; + Badminton<br>
-    &nbsp;&nbsp;&nbsp; +Bank hols?<br>
+    &nbsp;&nbsp;&nbsp; +
+    Zoe&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    - 21st May<br>
+    &nbsp;&nbsp;&nbsp; + Gingerline&nbsp;&nbsp; - 27th May<br>
+    &nbsp;&nbsp;&nbsp; + Badminton&nbsp; - 7th May<br>
+    &nbsp;&nbsp;&nbsp; + Bank hols?<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Website<br>
     &nbsp;&nbsp;&nbsp; + Complete Excel<br>
