Update with May objectives

--- a/src/templates/html/Energy_bus_exercises_May_2016.html
+++ b/src/templates/html/Energy_bus_exercises_May_2016.html
@@ -8,46 +8,43 @@
     <div style="height: 0px;"><a href="map.html"><small><small>(Back to map
             page)</small></small></a><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><br>
       </a> </div>
-    <div style="text-align: center;"><a href="file:///home/acarter/cricket/www/html/www.theenergybus.com"><big><big><span
+    <div style="text-align: center;"><a href="www.theenergybus.com"><big><big><span
               style="text-decoration: underline;">Energy bus - Exercises</span></big></big></a><br>
       <br>
-      <div style="text-align: left;">10/4/2016</div>
+      <div style="text-align: left;">2/5/2016</div>
     </div>
     SHORT-TERM VISION - NEXT MONTH<br>
     &nbsp;&nbsp;&nbsp; + Things happening<br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Dad</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Marathon</span><br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - <span style="text-decoration: line-through;">Penny
-      and Alan Birthdays</span><br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Badminton&nbsp; - 7th May<br>
+    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; - Merrist Wood - 8th May<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Dinner Sandra/Nick - 14th May<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -
+    Zoe&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    - 21st May<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Gingerline&nbsp;&nbsp; - 27th May<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Chelsea Flower show - 28th May<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Surrey County show - 30th May<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Personal<br>
-    &nbsp;&nbsp;&nbsp; + Flat<br>
     ON &nbsp; - look after plants<br>
-    <span style="text-decoration: line-through;">5&nbsp; &nbsp;&nbsp;&nbsp; -
-      dig corner</span><br>
-    <span style="text-decoration: line-through;">4&nbsp; &nbsp;&nbsp;&nbsp; -
-      paint kitchen</span><br>
-    6&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - touch up door<br>
-    3&nbsp; + Excel<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read IET magazine<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Read Bryson book<br>
+    &nbsp;&nbsp;&nbsp; + Flat<br>
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; - Find house<br>
+    &nbsp; &nbsp; + Excel<br>
     &nbsp;&nbsp;&nbsp; + Mindfulness book<br>
-    <span style="text-decoration: line-through;">2&nbsp; + IET</span><br>
-    <span style="text-decoration: line-through;">1&nbsp; + Podcasts</span><br>
+    <br>
     ON + Lou<br>
     ON + Job<br>
-    &nbsp;&nbsp;&nbsp; <span style="text-decoration: line-through;">+ Pay sis
-      for travelodge</span><br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br>
     MEDIUM TERM<br>
     + Buy dinner for bruv and sis<br>
     + Buy garden table<br>
     <br>
-    May<br>
-    &nbsp;&nbsp;&nbsp; +
-    Zoe&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    - 21st May<br>
-    &nbsp;&nbsp;&nbsp; + Gingerline&nbsp;&nbsp; - 27th May<br>
-    &nbsp;&nbsp;&nbsp; + Badminton&nbsp; - 7th May<br>
-    &nbsp;&nbsp;&nbsp; + Bank hols?<br>
+    June<br>
+    &nbsp;&nbsp;&nbsp; + Back to Devon? - 5th June<br>
+    &nbsp;&nbsp;&nbsp; + Endure 24 - 11th/12th June<br>
+    &nbsp;&nbsp;&nbsp; + Ted party 18th June<br>
     <br>
     &nbsp;&nbsp;&nbsp; + Website<br>
     &nbsp;&nbsp;&nbsp; + Complete Excel<br>
